[package]
description = "利用docker实现在线编译运行代码"
edition = "2021"
name = "noxue-compiler"
version = "1.0.3"
# documentation = "http://noxue.com"
homepage = "http://code.noxue.com"
license-file = "LICENSE.txt"
repository = "https://github.com/noxue/noxue-compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
uuid = {version = "0.8.2", features = ["v4"]}
